Ability to launch Mesos scheduler  on Vagrant. Fixed/improved the following:  - parameters parsing/formatting when passing them from one component to another  - added functionality to wait for Mesos Driver to join for the Mesos scheduler, also added shutdown hook to shut HTTP server down gracefully  - fixed CLI command to launch Heron executor in the Mesos executor tasks  - fixed managing countdown latch when waiting job scheduler to recover at start up  - added Readme